--- a/src/run.yml
+++ b/src/run.yml
@@ -1,1 +1,34 @@
-d
+name: auto-step
+
+on:
+  push:
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  schedule:
+    - cron: 0 14 * * *
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+    - uses: actions/checkout@v2
+    - name: 初始化Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: 3.7
+    - name: 开始
+      run: |
+        pip install requests
+        sckey='${{ secrets.SCKEY }}'
+        user='${{ secrets.USER }}'
+        pwd='${{ secrets.PWD }}'
+        step='${{ secrets.STEP }}'
+        
+        python3 main.py <<EOF
+        ${sckey}
+        ${user}
+        ${pwd}
+        ${step}
+        EOF
