--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -26,7 +26,7 @@ jobs:
         pip3 install -r rsa.txt
     - name: checkin
       run: | 
-        SCKEY=${{ secrets.SCKEY }}
+        sckey=${{ secrets.SCKEY }}
         user=${{ secrets.USER }}
         pwd=${{ secrets.PWD }}
         step=${{ secrets.STEP }}
@@ -59,12 +59,12 @@ jobs:
         echo "共有 $user_num 个账号，即将开始签到"
         fi   
 
-        random_time=$(($RANDOM % 5))
+        random_time=$(($RANDOM % 2))
         echo "等待 ${random_time} 分钟后开始签到"
         for((i=1;i<=${random_time};i++));  
         do
         echo "倒计时:剩余 $[${random_time}-$i] 分钟"
-        sleep 1m
+        sleep 20s
         done
 
         for ((i=0;i<$user_num;i++))
